src/style/demo/MockFeed.less
.fake-feed {
	/* Good-Loop overlay: common to all elements */
	.video-overlay > * {
		position: absolute;
	}

	/* Good-Loop overlay: the white wave graphic */
	.wave {
		width: 100%;
		background: no-repeat center/contain url("/img/overlay-double-wave.svg");
		color: black;
		font-family: 'Montserrat';
		font-weight: 600;
		font-size: 80%;
		line-height: 1.25; // for vertical balance of the middle text
		display: flex;
		justify-content: space-around;
		align-items: center;

		.brand-logo, .charity-carousel {
			width: 5em;
			height: 5em;
			position: relative; // make carousel position/size reference for charities
		}

		animation-name: wave-in;
		animation-duration: 1s;
		animation-timing-function: ease;
		animation-iteration-count: 1;
		animation-fill-mode: both
	}

	/* Good-Loop overlay: the finger graphic with the Good-Loop ident */
	.gl-ident {
		background-color: white;
		width: 10em;
		padding: 0.1em 0 0.1em 0.5em;
		border-radius: 1.5em 0 0 1.5em;
		height: 2.5em;
		animation-name: ident-in-out;
		animation-delay: 1s;
		animation-duration: 4s;
		animation-timing-function: ease-in-out;
		animation-iteration-count: 1;
		animation-fill-mode: both
	}

	/* Instagram interface: the "learn more" swipe-up prompt */
	.swipe-cta {
		.arrow {
			width: 1.5em;
			height: 1.5em;
			// Animations to mimic Instagram behaviour: plain arrow fades to inverse in roundel
			&.first {
				position: absolute;
				opacity: 1;
				animation: 0.4s fadeOut 2s linear forwards;
			}
			&.second {
				opacity: 0;
				animation: 0.4s fadeOut 2s linear reverse forwards;
			}
		}
	}
	
	

	&.instagram {
		/* Darken top and bottom of screen to make interface elements stand out*/
		.top-gradient {
			top: 0;
			width: 100%;
			height: 25%;
			background: linear-gradient(to bottom, rgba(0,0,0,0.5), rgba(0,0,0,0));
		}
		.bottom-gradient {
			bottom: 0;
			width: 100%;
			height: 25%;
			background: linear-gradient(to top, rgba(0,0,0,0.5), rgba(0,0,0,0));
		}
		/* Simulated video scrub bar (animation duration set dynamically in code) */
		.progress-bar {
			background-color: rgba(255, 255, 255, 0.3);
			width: 97%;
			margin: 0 1.5%;
			height: 0.1em;
			.progress-bar-filled {
				background-color: white;
				height: 100%;
				width: 0;
				animation-timing-function: linear;
				animation-fill-mode: both;
				&.animate1 {
					animation-name: progressBar1;
				}
				&.animate2 {
					animation-name: progressBar2;
				}
			}
		}

		/* The brand's icon and username */
		.brand-id {
			display: flex;
			.brand-logo {
				width: 2em;
				height: 2em;
				border-radius: 50%;
			}
			.brand-id-text {
				margin-left: 1em;
				line-height: 1.25;
				text-align: left;
			}
			.brand-name {
				font-size: 80%;
				font-weight: bold;
			}
			.sponsored-marker {
				font-size: 70%;
			}
		}

		/* Specific to the Instagram Stories layout */
		&.stories {
			.interface > *, .video-overlay > * {
				position: absolute;
			}
			.interface {
				color: white;
				.progress-bar {
					top: 0.5em;
				}
				.brand-id {
					position: absolute;
					top: 1.25em;
					left: 0.5em;
				}
				.swipe-cta {
					bottom: 0.5em;
					width: 100%;
				}
				.controls {
					font-size: 120%;
				}
				.dismiss {
					top: 0.5em;
					right: 1em;
				}
				.options {
					bottom: 0.5em;
					right: 1em;
				}
			}
			.video-overlay {
				.wave {
					position: absolute;
					height: 25%;
					bottom: 5%;
				}
				.gl-ident {
					top: 12%;
					right: 0;
				}
			}
		}
		/* Specific to the Instagram in-feed layout */
		&.infeed {
			color: #444;
			text-align: left;
			.brand-id {
				padding: 0.5em;
				.controls {
					font-weight: bold;
					position: absolute;
					top: 0.5em;
					right: 0.5em;
				}
			}
			.media-box {
				height: 20em; // Good sizing to show interface elements
				overflow: hidden; // Don't let blurred copy of mock media out
				.media-sizer {
					position: relative;
					height: 80%; // Push videos up a little to optimise positioning of wide media above wave graphic
				}
			}
			.wave {
				background: no-repeat bottom/contain url("/img/overlay-single-wave.svg");
				bottom: 0em;
				height: 7em;
				align-items: flex-end;
				padding-bottom: 0.5em;
				text-align: center;
			}
			.gl-ident {
				top: 0.5em;
				right: 0;
			}
			.swipe-cta {
				color: white;
				background-color: #3897f1;
				padding: 0.5em;
				display: flex;
				justify-content: space-between;
				height: 2.5em;
			}
			.likes, .post-text {
				font-size: 90%;
				padding-left: 0.5em;
			}
			.likes {
				font-weight: bold;
			}
			.post-text {
				font-size: 90%;
				.brand-name {
					font-weight: bold;
				}
			}
			.interface-bottom {
				position: absolute;
				bottom: 0;
				left: 0;
			}
		}
	}
}


@keyframes fadeOut {
	from { opacity: 1; }
	to { opacity: 0; }
}

@keyframes progressBar1 {
	from { width: 0%; }
	to { width: 100%; }
}

@keyframes progressBar2 {
	from { width: 0%; }
	to { width: 100%; }
}



/** Charity carousel animations */
@keyframes logoFade2a {
	0% { opacity: 1; }
	50% { opacity: 0; }
	100% { opacity: 1; }
}
@keyframes logoFade2b {
	0% { opacity: 0; }
	50% { opacity: 1; }
	100% { opacity: 0; }
}
@keyframes logoFade3a {
	0% { opacity: 1; }
	33.3% { opacity: 0; }
	66.6% { opacity: 0; }
	100% { opacity: 1; }
}
@keyframes logoFade3b {
	0% { opacity: 0; }
	33.3% { opacity: 1; }
	66.6% { opacity: 0; }
	100% { opacity: 0; }
}
@keyframes logoFade3c {
	0% { opacity: 0; }
	33.3% { opacity: 0; }
	66.6% { opacity: 1; }
	100% { opacity: 0; }
}

@keyframes ident-in-out {
	0% { right: -100%; }
	20% { right: 0; }
	80% { right: 0; }
	100% { right: -100%; }
}

@keyframes wave-in {
	0% { bottom: -100%; }
	100% { } // bottom: whatever's defined for the context (eg stories or in-feed)
}

// Animate the two- or three-charity carousel fade
.charity-carousel {
	.charity-logo {
		animation-iteration-count: infinite;
		object-fit: contain;
	}
	&.count2 {
		.charity-logo { animation-duration: 6s; }
		:nth-child(1) { animation-name: logoFade2a; }
		:nth-child(2) { animation-name: logoFade2b; }
	}
	&.count3 {
		.charity-logo { animation-duration: 9s; }
		:nth-child(1) { animation-name: logoFade3a; }
		:nth-child(2) { animation-name: logoFade3b; }
		:nth-child(3) { animation-name: logoFade3c; }
	}
}

